--- a/src/components/Terminal/index.module.css
+++ b/src/components/Terminal/index.module.css
@@ -6,31 +6,25 @@
   border-radius: 7px;
   position: relative;
 }
-
 .terminal pre {
   white-space: nowrap;
   overflow: auto;
   padding: 20px;
 }
-
 .terminal pre::-webkit-scrollbar {
   height: 11px;
   border-radius: 15px;
 }
-
 .terminal pre::-webkit-scrollbar-track {
   background-color: transparent;
 }
-
 .terminal pre::-webkit-scrollbar-thumb {
   background-color: #333;
   border-radius: 15px;
 }
-
 .terminal:last-child {
   margin-bottom: 0;
 }
-
 .terminal .head {
   pointer-events: none;
   -webkit-user-select: none;
@@ -41,26 +35,18 @@
   width: -moz-max-content;
   width: max-content;
 }
-
 .terminal .head span {
   color: #d539c3;
 }
-
 .terminal .head span:first-child {
   color: #00cc00;
 }
-
 .terminal .head span:last-child {
   color: #e3e524;
 }
-
 .terminal .body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 10px;
   color: #ebebeb;
   margin-top: 5px;
@@ -68,7 +54,6 @@
   width: -moz-max-content;
   width: max-content;
 }
-
 .terminal .body span:first-child {
   pointer-events: none;
   -webkit-user-select: none;
@@ -76,12 +61,10 @@
       -ms-user-select: none;
           user-select: none;
 }
-
 .terminal .absolute {
   position: absolute;
   opacity: 0;
 }
-
 .terminal .copied {
   font-size: 14px;
   color: #fff;
@@ -95,8 +78,6 @@
   top: 25px;
   right: 20px;
 }
-
 .terminal:hover .absolute {
   opacity: 1;
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
