--- a/src/components/SideNav/index.module.css
+++ b/src/components/SideNav/index.module.css
@@ -424,21 +424,24 @@ video {
 @media screen and (max-width: 1180px) {
   .nav {
     border: 0;
-    display: none;
+    display: block;
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
-    height: 100vh;
+    height: 0;
+    overflow-y: hidden;
     background-color: #fff;
     z-index: 8;
+    transition-property: height;
+    transition-duration: 500ms;
   }
   .nav nav {
     position: static;
     padding: 50px;
   }
   .nav.open {
-    display: block;
+    height: 100vh;
   }
 }
 @media screen and (max-width: 650px) {
