Initial community page setup

--- a/src/components/DocSublink/index.module.css
+++ b/src/components/DocSublink/index.module.css
@@ -1,14 +1,19 @@
 .link {
   padding-left: 40px;
+  -webkit-transition: color;
   transition: color;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  transition-duration: 300ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
   color: #878787;
   font-size: 0.9em;
 }
+
 .link.active, .link:hover {
   color: #9d50f6;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
