--- a/src/components/ContentsButton/index.module.css
+++ b/src/components/ContentsButton/index.module.css
@@ -1,7 +1,11 @@
 .button {
   display: none;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   --size: 50px;
   width: var(--size);
   height: var(--size);
@@ -12,33 +16,49 @@
   background-color: #008f75;
   z-index: 10;
 }
+
 .button span {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 10px;
   width: 30px;
 }
+
 .button span::before, .button span::after {
   content: "";
   background-color: white;
   height: 3px;
   border-radius: 100px;
-  transform-origin: center;
+  -webkit-transform-origin: center;
+          transform-origin: center;
 }
+
 .button span::before {
-  transform: translateY(7px) rotate(45deg);
+  -webkit-transform: translateY(7px) rotate(45deg);
+          transform: translateY(7px) rotate(45deg);
 }
+
 .button span::after {
-  transform: translateY(-7px) rotate(-45deg);
+  -webkit-transform: translateY(-7px) rotate(-45deg);
+          transform: translateY(-7px) rotate(-45deg);
 }
 
 @media screen and (max-width: 1180px) {
   .button {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 }
+
 @media screen and (max-width: 650px) {
   .button {
     bottom: 20px;
   }
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
