--- a/src/components/DocLink/index.module.css
+++ b/src/components/DocLink/index.module.css
@@ -1,14 +1,19 @@
 .link {
   padding-left: 20px;
   color: #333;
+  -webkit-transition: color;
   transition: color;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  transition-duration: 300ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
   font-size: 0.95em;
 }
+
 .link:hover, .link.active {
   color: #9d50f6;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
