--- a/src/components/Dropdown/index.module.css
+++ b/src/components/Dropdown/index.module.css
@@ -1,10 +1,18 @@
 .dropdown .inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 18px;
   overflow: hidden;
+  -webkit-transition: height 0.4s;
   transition: height 0.4s;
 }
+
 .dropdown .inner a:first-child {
   padding-top: 18px;
-}/*# sourceMappingURL=index.module.css.map */
+}
+/*# sourceMappingURL=index.module.css.map */
