--- a/src/components/SideNav/index.module.css
+++ b/src/components/SideNav/index.module.css
@@ -5,8 +5,7 @@
 *,
 ::before,
 ::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   border-width: 0;
   /* 2 */
@@ -106,7 +105,7 @@ code,
 kbd,
 samp,
 pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -189,9 +188,9 @@ select {
 2. Remove default button styles.
 */
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type=button],
+[type=reset],
+[type=submit] {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
@@ -233,7 +232,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 1. Correct the odd appearance in Chrome and Safari.
 2. Correct the outline style in Safari.
 */
-[type="search"] {
+[type=search] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -312,6 +311,13 @@ textarea {
 1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  opacity: 1;
+  /* 1 */
+  color: #9ca3af;
+  /* 2 */
+}
 
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
@@ -321,16 +327,14 @@ textarea:-ms-input-placeholder {
   /* 2 */
 }
 
-input::-webkit-input-placeholder,
-textarea::-webkit-input-placeholder {
+input::-moz-placeholder, textarea::-moz-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
   /* 2 */
 }
 
-input::-ms-input-placeholder,
-textarea::-ms-input-placeholder {
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
@@ -349,7 +353,7 @@ textarea::placeholder {
 Set the default cursor for buttons.
 */
 button,
-[role="button"] {
+[role=button] {
   cursor: pointer;
 }
 
@@ -391,7 +395,6 @@ video {
 .nav {
   border-right: 1px solid #d9d9d9;
 }
-
 .nav nav {
   position: -webkit-sticky;
   position: sticky;
@@ -405,23 +408,15 @@ video {
   padding-bottom: 50px;
   color: #545454;
 }
-
 .nav nav .header {
   font-weight: 600;
   font-size: 17px;
 }
-
 .nav nav .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   gap: 18px;
 }
-
 .nav nav .containerRef {
   margin-top: 30px;
 }
@@ -438,10 +433,8 @@ video {
     overflow-y: hidden;
     background-color: #fff;
     z-index: 8;
-    -webkit-transition-property: height;
     transition-property: height;
-    -webkit-transition-duration: 500ms;
-            transition-duration: 500ms;
+    transition-duration: 500ms;
   }
   .nav nav {
     position: static;
@@ -451,11 +444,9 @@ video {
     height: 100vh;
   }
 }
-
 @media screen and (max-width: 650px) {
   .nav nav {
     padding: 25px;
     padding-top: 40px;
   }
-}
-/*# sourceMappingURL=index.module.css.map */
+}/*# sourceMappingURL=index.module.css.map */
