--- a/src/pages/Community/index.module.css
+++ b/src/pages/Community/index.module.css
@@ -1,1 +1,5 @@
-/*# sourceMappingURL=index.module.css.map */
+.community {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}/*# sourceMappingURL=index.module.css.map */
