--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -6,6 +6,8 @@
   align-items: center;
   justify-content: center;
   div {
+    position: relative;
+        border-radius: 999px;
     h1 {
       font-size: 34px;
       font-weight: 700;
