--- a/src/components/Cards/index.module.scss
+++ b/src/components/Cards/index.module.scss
@@ -1,6 +1,11 @@
 .container{
-.cards{
+    width: 100%;
+    .cards{
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+    align-items: center;
+    justify-content: space-around;
 }
 }
