--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -1,9 +1,10 @@
 .card {
   width: 75%;
   margin: auto;
+  font-size: 16px;
 }
-.card displa h1 {
-  font-size: 20px;
+.card h1 {
+  font-size: 1.25em;
   font-weight: 700;
 }
 .card p {
