--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -1,9 +1,10 @@
 .card{
     width: 75%;
     margin: auto;
-    displa
+    font-size: 16px;
+    
     h1{
-        font-size: 20px;
+        font-size: 1.25em;
         font-weight: 700;
     }
     p{
