--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -8,7 +8,11 @@
   font-weight: 700;
 }
 .card p {
+  box-sizing: border-box;
   font-size: 14px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  height: 3em;
 }
 .card a {
   text-decoration: underline;
