--- a/src/pages/Community/index.module.css
+++ b/src/pages/Community/index.module.css
@@ -1,6 +1,8 @@
 .community {
   display: flex;
+  font-size: 16px;
   flex-direction: column;
   min-height: 100vh;
   height: 100%;
+  gap: 1.5em;
 }/*# sourceMappingURL=index.module.css.map */
