--- a/src/components/Cards/index.module.scss
+++ b/src/components/Cards/index.module.scss
@@ -1,5 +1,8 @@
+@import "../../sass/abstracts/abstract";
 .container{
     width: 100%;
+    font-size: 16px;
+ 
     .cards{
     width: 100%;
     display: grid;
