--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -1,19 +1,55 @@
 .card {
   width: 75%;
   margin: auto;
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
 }
-.card h1 {
+.card .header {
+  width: 100%;
+  height: 150px;
+  border-radius: 8px 8px 0 0;
+  background-image: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card .header p {
+  font-size: 3em;
+  font-weight: 700;
+  color: white;
+}
+.card .header::before {
+  content: attr(data-mark);
+  position: absolute;
+  top: 0;
+  font-size: 7em;
+  font-weight: 900;
+  color: transparent;
+  -webkit-text-stroke: 0.25px white;
+}
+.card .body {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+  padding: 1.5em;
+}
+.card .body h1 {
   font-size: 1.25em;
   font-weight: 700;
 }
-.card p {
-  font-size: 14px;
+.card .body p {
+  font-size: 1.05em;
   text-overflow: ellipsis;
   overflow: hidden;
   height: 3em;
+  color: #4D4D4D;
 }
-.card a {
+.card .body .link {
+  color: #737373;
+}
+.card .body .link a {
   text-decoration: underline;
-  -webkit-text-decoration-color: gr;
-          text-decoration-color: gr;
+  -webkit-text-decoration-color: #737373;
+          text-decoration-color: #737373;
 }/*# sourceMappingURL=index.module.css.map */
