--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -1,18 +1,60 @@
-.card{
+.card {
     width: 75%;
-    margin: auto;    
-    h1{
-        font-size: 1.25em;
-        font-weight: 700;
+    margin: auto;
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    .header{
+        width: 100%;
+        height: 150px;
+        border-radius: 8px 8px 0 0;
+        background-image: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        p{
+            font-size: 3em;
+            font-weight: 700;
+            color: white;
+        }
+        &::before{
+            content: attr(data-mark);
+            position: absolute;
+            top: 0;
+            font-size: 7em;
+            font-weight: 900;
+            color: transparent;
+            -webkit-text-stroke: 0.25px white;
+        }
     }
-    p{
-        font-size: 14px;
-        text-overflow: ellipsis;
-        overflow: hidden; 
-        height: 3em;
+    
+    .body {
+        display: flex;
+        flex-direction: column;
+        gap: 0.25em;
+        padding: 1.5em;
+        h1 {
+            font-size: 1.25em;
+            font-weight: 700;
+        }
+
+
+        p {
+            font-size: 1.05em;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            height: 3em;
+            color: #4D4D4D;
+        }
+        .link{
+            color: #737373;
+        a {
+            text-decoration: underline;
+            text-decoration-color: #737373;
+        }
     }
-    a{
-        text-decoration: underline;
-        text-decoration-color: gr;
     }
+}
+@media screen and (max-width: 950px) {
+    
 }
