--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -3,6 +3,12 @@
   margin: auto;
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
+  transition-property: box-shadow;
+  transition-duration: 750ms;
+  transition-timing-function: ease-in;
+}
+.card:hover {
+  box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.2);
 }
 .card .header {
   width: 100%;
