--- a/src/pages/Community/index.module.css
+++ b/src/pages/Community/index.module.css
@@ -17,4 +17,10 @@
   background-color: #1A1A1A;
   color: #fff;
   cursor: pointer;
+  transition-property: background-color;
+  transition-duration: 500ms;
+  transition-timing-function: ease-in;
+}
+.community .powered:hover {
+  background-color: #3b3a3a;
 }/*# sourceMappingURL=index.module.css.map */
