--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -3,14 +3,30 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
+  gap: 0.75em;
   justify-content: center;
+  position: relative;
+}
+.header .Crystals {
+  display: flex;
+  position: absolute;
+  left: 10px;
+  gap: 50px;
+  height: 150px;
+  top: 10px;
+}
+.header .Crystals .Crystal1 {
+  align-self: flex-end;
+}
+.header .Crystals .Crystal2 {
+  align-self: flex-start;
 }
 .header div {
   position: relative;
   border-radius: 999px;
 }
 .header div h1 {
-  font-size: 34px;
+  font-size: 2.2em;
   font-weight: 700;
 }
 .header p {
