--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -3,12 +3,28 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
+  gap: 0.75em;
   justify-content: center;
+  position: relative;
+    .Crystals {
+        display: flex;
+        position: absolute;
+        left: 10px;
+        gap: 50px;
+        height: 150px;
+        top: 10px;
+        .Crystal1{
+          align-self: flex-end;
+        }
+        .Crystal2{
+          align-self: flex-start;
+        }
+      }
   div {
     position: relative;
         border-radius: 999px;
     h1 {
-      font-size: 34px;
+      font-size: 2.2em;
       font-weight: 700;
     }
   }
