--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -6,7 +6,7 @@
   gap: 0.75em;
   justify-content: center;
   position: relative;
-    
+    text-align: center;
   div {
     position: relative;
         border-radius: 999px;
@@ -14,14 +14,45 @@
       font-size: 2.2em;
       font-weight: 700;
     }
+     
+        span {
+          position: absolute;
+          right: 0px;
+          top: 0;
+          .First{
+            position: absolute;
+            top: -5px;
+            
+          }
+          .Second{
+            position: absolute;
+            right: -30px ;
+            top: -5px;
+          }
+          .Third{
+          position: absolute;
+            bottom: -30px;
+            right: -20px;
+          }
+        }
   }
   p{
     width: calc(6/12 * 100%);
   }
+  
   @media screen and (max-width: 920px) {
+    gap: 0px;
     p{
-    width: calc(10/12 * 100%);
-    margin-inline: auto;
+    width: calc(11/12 * 100%);
     }
+    div{
+    h1{
+      font-size: 1.5em;
+    }
+                span {
+                  right: 5px;
+                  top: -5px;
+                }
+  }
   }
 }
