--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -6,6 +6,7 @@
   gap: 0.75em;
   justify-content: center;
   position: relative;
+  text-align: center;
 }
 .header div {
   position: relative;
@@ -15,12 +16,40 @@
   font-size: 2.2em;
   font-weight: 700;
 }
+.header div span {
+  position: absolute;
+  right: 0px;
+  top: 0;
+}
+.header div span .First {
+  position: absolute;
+  top: -5px;
+}
+.header div span .Second {
+  position: absolute;
+  right: -30px;
+  top: -5px;
+}
+.header div span .Third {
+  position: absolute;
+  bottom: -30px;
+  right: -20px;
+}
 .header p {
   width: 50%;
 }
 @media screen and (max-width: 920px) {
+  .header {
+    gap: 0px;
+  }
   .header p {
-    width: 83.3333333333%;
-    margin-inline: auto;
+    width: 91.6666666667%;
+  }
+  .header div h1 {
+    font-size: 1.5em;
+  }
+  .header div span {
+    right: 5px;
+    top: -5px;
   }
 }/*# sourceMappingURL=index.module.css.map */
