--- a/src/pages/Community/index.module.css
+++ b/src/pages/Community/index.module.css
@@ -20,6 +20,7 @@
   gap: 50px;
   height: 150px;
   top: 10%;
+  z-index: -1;
 }
 .community .Crystals .Crystal1 {
   align-self: flex-end;
@@ -34,6 +35,7 @@
   gap: 50px;
   height: 150px;
   top: 10%;
+  z-index: -1;
 }
 .community .Crystals2 .Crystal1 {
   align-self: flex-end;
@@ -58,4 +60,9 @@
 }
 .community .powered:hover {
   background-color: #3b3a3a;
+}
+@media screen and (max-width: 950px) {
+  .community .TransparentRectangle {
+    display: none;
+  }
 }/*# sourceMappingURL=index.module.css.map */
