created css styles

--- a/src/pages/Community/subpage/Setup/index.module.scss
+++ b/src/pages/Community/subpage/Setup/index.module.scss
@@ -1,4 +1,5 @@
 .setup{
+    .content{
     .link {
             color: #737373;
     
@@ -7,4 +8,5 @@
                 text-decoration-color: #737373;
             }
         }
+    }
 }
