--- a/src/pages/Community/subpage/Setup/index.module.css
+++ b/src/pages/Community/subpage/Setup/index.module.css
@@ -1,8 +1,130 @@
-.setup .content .link {
+.setupcontainer .setup {
+  display: flex;
+  width: 100%;
+  margin: auto;
+  position: relative;
+  justify-content: space-around;
+  align-items: center;
+}
+.setupcontainer .setup .content {
+  flex-basis: 40%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.setupcontainer .setup .content .title {
+  font-size: 2em;
+  font-weight: 700;
+}
+@media screen and (max-width: 960px) {
+  .setupcontainer .setup .content .title {
+    font-size: 1.5em;
+  }
+}
+.setupcontainer .setup .content .link {
   color: #737373;
 }
-.setup .content .link a {
+.setupcontainer .setup .content .link a {
   text-decoration: underline;
   -webkit-text-decoration-color: #737373;
           text-decoration-color: #737373;
+}
+.setupcontainer .setup .content .description {
+  color: #4D4D4D;
+}
+.setupcontainer .setup .content .download {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.setupcontainer .setup .content .download a {
+  padding: 0.75em 2.5em;
+  border-radius: 9999px;
+  font-weight: 700;
+  font-size: 1em;
+}
+.setupcontainer .setup .content .download .json {
+  background-color: #008F75;
+  transition-property: background-color;
+  transition-duration: 500ms;
+  transition-timing-function: ease-in;
+  color: white;
+}
+.setupcontainer .setup .content .download .json:hover {
+  background-color: #11caa8;
+}
+.setupcontainer .setup .content .download .container {
+  background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+  padding: 1px;
+  display: flex;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  justify-content: center;
+  align-items: center;
+  border-radius: 999px;
+}
+.setupcontainer .setup .content .download .container:hover {
+  background-image: linear-gradient(-138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+}
+.setupcontainer .setup .content .download .container:hover .template::before {
+  background-image: linear-gradient(-138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+}
+.setupcontainer .setup .content .download .container .template {
+  background: white;
+  border: 2px solid transparent;
+  position: relative;
+  z-index: 50;
+  border-radius: inherit;
+  color: transparent;
+}
+.setupcontainer .setup .content .download .container .template::before {
+  content: "Download Template";
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+  background-clip: text;
+  background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+  transition-property: background-image;
+  transition-duration: 500ms;
+  transition-timing-function: ease-in;
+}
+.setupcontainer .setup .editor {
+  flex-basis: 40%;
+  width: 40%;
+}
+.setupcontainer .setup .editor div::after {
+  content: "";
+  position: absolute;
+  background-image: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
+  border-radius: 8px;
+  top: 5px;
+  bottom: -10px;
+  left: 5px;
+  right: -10px;
+  z-index: -1;
+}
+@media screen and (max-width: 960px) {
+  .setupcontainer .setup {
+    flex-direction: column-reverse;
+    gap: 30px;
+  }
+  .setupcontainer .setup .content {
+    flex-basis: 90%;
+    width: 90%;
+  }
+  .setupcontainer .setup .editor {
+    flex-basis: 90%;
+    width: 90%;
+  }
+}
+.setupcontainer .communityLink {
+  text-decoration: underline;
+  -webkit-text-decoration-color: #3D3DFF;
+          text-decoration-color: #3D3DFF;
+  color: #3D3DFF;
+}
+.setupcontainer .communityLink::after {
+  content: "\f007";
 }/*# sourceMappingURL=index.module.css.map */
