--- a/src/pages/Community/subpage/Setup/index.module.scss
+++ b/src/pages/Community/subpage/Setup/index.module.scss
@@ -1,12 +1,154 @@
-.setup{
-    .content{
-    .link {
-            color: #737373;
-    
-            a {
-                text-decoration: underline;
-                text-decoration-color: #737373;
+.setupcontainer {
+    .setup {
+        display: flex;
+        width: 100%;
+        margin: auto;
+        position: relative;
+        justify-content: space-around;
+        align-items: center;
+
+        .content {
+            flex-basis: 40%;
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            .title {
+                font-size: 2em;
+                font-weight: 700;
+
+                @media screen and (max-width: 960px) {
+                    font-size: 1.5em;
+                }
             }
+
+            .link {
+                color: #737373;
+
+                a {
+                    text-decoration: underline;
+                    text-decoration-color: #737373;
+                }
+            }
+
+            .description {
+                color: #4D4D4D;
+            }
+
+            .download {
+                display: flex;
+                align-items: center;
+                justify-content: space-around;
+
+                a {
+                    padding: 0.75em 2.5em;
+                    border-radius: 9999px;
+                    font-weight: 700;
+                    font-size: 1em;
+                }
+
+                .json {
+                    background-color: #008F75;
+                    transition-property: background-color;
+                    transition-duration: 500ms;
+                    transition-timing-function: ease-in;
+
+                    &:hover {
+                        background-color: #11caa8;
+                    }
+
+                    color: white;
+                }
+
+                .container {
+                    background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+                    padding: 1px;
+                    display: flex;
+                    width: fit-content;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 999px;
+
+                    &:hover {
+                        background-image: linear-gradient(-138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+
+                        .template {
+                            &::before {
+                                background-image: linear-gradient(-138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+                            }
+                        }
+                    }
+
+                    .template {
+                        background: white;
+                        border: 2px solid transparent;
+                        position: relative;
+                        z-index: 50;
+                        border-radius: inherit;
+                        color: transparent;
+
+                        &::before {
+                            content: "Download Template";
+                            -webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;
+                            color: transparent;
+                            background-clip: text;
+                            background-image: linear-gradient(138.94deg, #9D50F6 33.05%, #00D1AB 80.37%);
+                            transition-property: background-image;
+                            transition-duration: 500ms;
+                            transition-timing-function: ease-in;
+                        }
+                    }
+                }
+            }
+        }
+
+        .editor {
+            flex-basis: 40%;
+            width: 40%;
+
+            div {
+                &::after {
+                    content: "";
+                    position: absolute;
+                    background-image: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
+                    border-radius: 8px;
+                    top: 5px;
+                    bottom: -10px;
+                    left: 5px;
+                    right: -10px;
+                    z-index: -1;
+                }
+            }
+        }
+
+        @media screen and(max-width: 960px) {
+            flex-direction: column-reverse;
+            gap: 30px;
+
+            .content {
+                flex-basis: 90%;
+                width: 90%;
+
+            }
+
+            .editor {
+                flex-basis: 90%;
+                width: 90%;
+            }
+
+        }
+
+    }
+
+    .communityLink {
+        text-decoration: underline;
+        text-decoration-color: #3D3DFF;
+        color: #3D3DFF;
+
+        &::after {
+            content: "\f007";
         }
     }
 }
