--- a/src/pages/Community/subpage/Setup/index.module.css
+++ b/src/pages/Community/subpage/Setup/index.module.css
@@ -120,6 +120,11 @@
   left: 0;
   z-index: -1;
 }
+.setupcontainer .setup .rightDot {
+  position: absolute;
+  right: 0;
+  z-index: -1;
+}
 @media screen and (max-width: 960px) {
   .setupcontainer .setup {
     flex-direction: column-reverse;
