--- a/src/pages/Community/subpage/Setup/index.module.scss
+++ b/src/pages/Community/subpage/Setup/index.module.scss
@@ -137,6 +137,11 @@
             left: 0;
             z-index: -1;
         }
+        .rightDot{
+            position: absolute;
+                right: 0;
+                z-index: -1;
+        }
 
         @media screen and(max-width: 960px) {
             flex-direction: column-reverse;
