--- a/src/pages/Community/index.module.scss
+++ b/src/pages/Community/index.module.scss
@@ -64,6 +64,9 @@
         }
     }
 @media screen and (max-width: 950px) {
+    .powered {
+        font-size: 12px;
+    }
             .TransparentRectangle {
                 display: none;
         }
