--- a/src/pages/Community/subpage/Setup/index.module.scss
+++ b/src/pages/Community/subpage/Setup/index.module.scss
@@ -66,7 +66,11 @@
                 }
 
                 .json {
+                    padding: 0.8125em 2.5625em;
                     background-color: #008F75;
+                    border:2px solid #008F75;
+                    width: fit-content;
+                    display: flex;
                     transition-property: background-color;
                     transition-duration: 500ms;
                     transition-timing-function: ease-in;
@@ -104,7 +108,7 @@
                         z-index: 50;
                         border-radius: inherit;
                         color: transparent;
-
+                        width: fit-content;
                         &::before {
                             content: "Download Template";
                             -webkit-background-clip: text;
